--- a/index.html
+++ b/index.html
@@ -30,19 +30,14 @@
                 <div onClick="handleClick(this)" id="8" class="col" ></div>
             </div><div id="result-box">
                 <p id="result-text"></p>
-    
-              </div>
-
+            </div>
             <button onclick="reloadWindow()">Reload</button>
-                <script>
-                    function reloadWindow() {
-                        location.reload();</script>
-
         </div>
-
-        
-        </div>
-
-
-</body></html>
-
+    </div>
+    <script>
+        function reloadWindow() {
+            location.reload();
+        }
+    </script>
+</body>
+</html>
