--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
             location.reload();
         }
     </script>
+
+<footer class="footer">
+    <p>Created by Rishi Ranjan ©️  <br>    <a href="https://github.com/RiH-137/Guess-The-Color" target="_blank">Contribute Here-> RiH-137 </a></p><hr></footer>
 </body>
 </html>
